# sample_sensor_kit_launch_for_scout

TransducerM_Example_ROS2-pkg_V1-1/config/: params.yaml
TransducerM_Example_ROS2-pkg_V1-1/launch/: imu.launch.py
TransducerM_Example_ROS2-pkg_V1-1/src/: tm_imu_node.cpp
common_sensor_launch/launch/: nebula_node_container.launch.py  robosense_Helios.launch.xml
fixposition_driver_ros2/fixposition_driver_ros2/launch/: tcp.launch  tcp.yaml
fixposition_driver_ros2/fixposition_extractor/: package.xml  setup.cfg  setup.py
scout_sensor_kit_description/: CMakeLists.txt  package.xml
scout_sensor_kit_description/config/: sensor_kit_calibration.yaml  sensors_calibration.yaml
scout_sensor_kit_description/urdf/: sensor_kit.xacro
scout_sensor_kit_launch/: CMakeLists.txt  package.xml
scout_sensor_kit_launch/launch/: lidar.launch.xml  sensing.launch.xml
sensor_descriptions/fp_vrtk_description/: CMakeLists.txt  package.xml
sensor_descriptions/fp_vrtk_description/mesh/: fixposition_link.STL
sensor_descriptions/frame_description/: CMakeLists.txt  package.xml
sensor_descriptions/gnss_antenna_description/: CMakeLists.txt  package.xml
sensor_descriptions/gnss_antenna_description/mesh/: gnss_antenna.STL
sensor_descriptions/gnss_antenna_description/urdf/: gnss_antenna.xacro
sensor_descriptions/imu_tm431_description/: CMakeLists.txt  package.xml
sensor_descriptions/rs_helios_description/: CMakeLists.txt  package.xml
sensor_descriptions/rs_m1_description/: CMakeLists.txt  package.xml
sensor_descriptions/zed2i_description/: CMakeLists.txt  package.xml
(+19 files in other folders)
